[tool.poetry]
name = "ejskb"
version = "0.1.0"
description = "e.j.'s onboarding CLI for Klickbrick"
authors = ["e.j. <git@ejs.sh>"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
ejskb = "ejskb:main"


[[tool.poetry.source]]
name = "ejskb"
url = "https://github.com/ejsdotsh/ejskb/"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"

[tool.poetry.group.dev.dependencies]
behave = "^1.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
